@@ -34,12 +34,8 @@ class ClusterInspectionTestCase(ToolTestCase):
                 'additional_emr_info': None,
                 'bootstrap': [],
                 'bootstrap_actions': [],
-                'bootstrap_cmds': [],
-                'bootstrap_files': [],
                 'bootstrap_mrjob': None,
                 'bootstrap_python': None,
-                'bootstrap_python_packages': [],
-                'bootstrap_scripts': [],
                 'bootstrap_spark': None,
                 'cloud_fs_sync_secs': None,
                 'cloud_log_dir': None,
